# robotica

./: .gitignore  README.md
Robot/: camerapublisher.sh  lanzar_recog.sh  my_map.yaml
Robot/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Robot/log/: latest_build  latest_list
Robot/src/: como funciona el IR.txt  keras_model.h5  labels.txt
Servidor/: ReadMe.md
Servidor/API/: Animal.py  FaceRecognition.py  Habitat.py  Robot.py  Voice.js  app.py
Servidor/bbdd/: animales.csv
Servidor/comandos/: conectar.bash  desconectar.bash  detener.bash  girar.bash  image.bash  iniciar_mundo_gazebo.bash  iniciar_servicio_movimiento.bash  iniciar_servicio_real.sh  iniciar_webserver.bash  packages_installer.bash  rosbridge.bash  subscribirse_imagen.bash
Web/: index.html
Web/classes/: Animal.js  AnimalModal.js  FaceRecognition.js  FakeVoice.js  Habitat.js  Robot.js  Roslib.js
Web/css/: admin.css  landing.css
Web/js/: admin.js  landing.js
Web/pages/: admin.html  animal.html  landing.html
Web/templates/: pie.php
proy_nexa/: package.xml
proy_nexa/custom_interface/: CMakeLists.txt  package.xml
proy_nexa/install/: local_setup.sh  setup.ps1  setup.sh
proy_nexa/install/proy_nexa/share/proy_nexa/: package.ps1  package.sh  package.xml  package.zsh
proy_nexa/install/proy_nexa/share/proy_nexa/cmake/: proy_nexaConfig.cmake
proy_nexa/log/: latest_build
proy_nexa/my_first_service/: package.xml  setup.cfg  setup.py
proy_nexa/proy_nexa_interface/: CMakeLists.txt
proy_nexa/show_msg/: package.xml  (+1 more)
proy_nexa_service/: setup.cfg  setup.py
(+251 files in other folders)
