<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>proy_nexa</name>
  <version>2.1.4</version>
  <description>ROS 2 packages for Nexa Project</description>
  <maintainer email="rchen1@epsg.upv.es">chen</maintainer>
  <license>Apache 2.0</license>
  <url type="website"></url> <!--Enlace web del proyecto-->
  <url type="repository">https://github.com/carles2002/robotica</url>
  <url type="bugtracker">https://github.com/carles2002/robotica/issues</url>
  <author email="carlesmartif@gmail.com">Carles Marti</author>
  <author email="pepe.gasco.bule@gmail.com">Pepe Gasco</author>
  <author email="zpasgon@upv.es">Zaida Pastor</author>
  <author email="asoltom@gmail.com">Arnau Soler</author>
  <author email="ruiyuchen1101@gmail.com">Ruiyu Chen</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
